<resources>
    <string name="app_name">Maon Soccer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="competitions">Competitions</string>
    <string name="competition_note_start">Note: Only competitions marked with</string>
    <string name="competition_note_end">are available for this subscription</string>
    <string name="league">League</string>
    <string name="maon_soccer">MAON SOCCER</string>
    <string name="nationality">Nationality:</string>
    <string name="birth_country">Birth Country</string>
    <string name="player_role">Player Role</string>
    <string name="player_position">Player Position</string>
    <string name="age">Age:</string>
    <string name="name">Name:</string>
    <string name="please_wait">Please wait ...</string>
    <string name="start_date">Start Date:</string>
    <string name="pn">PN</string>
    <string name="nickname">NickName:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="club_details">Club Details</string>
</resources>