<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_screen_bg"
    tools:context=".ui.AllCompetitionFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/competition_app_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:elevation="4dp"
        android:background="@drawable/main_screen_top">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/start_image"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/kickball"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:id="@+id/mid_image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/main_screen_top"
                android:text="@string/maon_soccer"
                android:fontFamily="@font/roboto_bold"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/start_image"
                app:layout_constraintEnd_toStartOf="@id/end_image"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/end_image"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:src="@drawable/footballers"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_connect_to_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:visibility="gone"
        android:src="@drawable/ic_baseline_cloud_off_24"
        app:layout_constraintTop_toBottomOf="@+id/competition_app_bar"
        app:layout_constraintEnd_toStartOf="@+id/tv_connect_to_internet"/>

    <TextView
        android:id="@+id/tv_connect_to_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Connect to internet"
        android:textColor="@color/black"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="@+id/iv_connect_to_internet"
        app:layout_constraintBottom_toBottomOf="@+id/iv_connect_to_internet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_competitions_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/competition_item"
        tools:itemCount="20"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_connect_to_internet"
        app:layout_constraintBottom_toTopOf="@+id/page_note_start"/>

    <ProgressBar
        android:id="@+id/all_competition_pg_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_pls_wait"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textColor="@color/black"
        android:fontFamily="@font/merriweather_light"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/all_competition_pg_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/please_wait"/>

    <TextView
        android:id="@+id/page_note_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:layout_marginStart="10dp"
        android:textColor="@color/red_text"
        android:text="@string/competition_note_start"
        app:layout_constraintTop_toTopOf="@+id/page_note_end"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/iv_page_note"
        android:layout_width="16dp"
        android:layout_height="16dp"
        app:layout_constraintStart_toEndOf="@+id/page_note_start"
        app:layout_constraintTop_toTopOf="@+id/page_note_start"
        android:src="@drawable/ic_baseline_check_24"/>

    <TextView
        android:id="@+id/page_note_end"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="11sp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/red_text"
        android:text="@string/competition_note_end"
        app:layout_constraintStart_toEndOf="@+id/iv_page_note"
        app:layout_constraintBottom_toBottomOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>