<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_screen_bg"
    tools:context=".ui.TeamDetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/team_app_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="4dp"
        android:background="@color/green"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <ImageView
                android:id="@+id/iv_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="10dp"
                android:src="@drawable/ic_baseline_arrow_back_24"/>

            <TextView
                android:id="@+id/team_page_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:src="@drawable/main_screen_top"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/maon_soccer" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/team_app_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="45dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/club_detail_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/team_detail_logo"
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_baseline_change_history_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_club_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:text="Club Details"
                android:textColor="@color/green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/club_detail_card" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_club_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_club_detail">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_founded"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Founded:"
                        android:textColor="@color/black"
                        android:fontFamily="@font/merriweather_italic"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <TextView
                        android:id="@+id/team_founded_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="52dp"
                        android:fontFamily="@font/merriweather_italic"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toEndOf="@+id/tv_founded"
                        app:layout_constraintTop_toTopOf="@+id/tv_founded"
                        tools:text="Date Founded" />

                    <TextView
                        android:id="@+id/tv_nickName1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/nickname"
                        android:fontFamily="@font/merriweather_italic"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/team_founded_date"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/tv_nick_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="NickName"
                        android:fontFamily="@font/merriweather_italic"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="@+id/team_founded_date"
                        app:layout_constraintTop_toTopOf="@+id/tv_nickName1"/>

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Address"
                        android:fontFamily="@font/merriweather_italic"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/tv_nick_name"
                        app:layout_constraintStart_toStartOf="parent"/>
                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="Address"
                        android:fontFamily="@font/merriweather_italic"
                        android:textColor="@color/black"
                        app:layout_constraintStart_toStartOf="@+id/team_founded_date"
                        app:layout_constraintTop_toTopOf="@+id/address"/>

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_number"
                        android:fontFamily="@font/merriweather_italic"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/tv_address"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/tv_phone_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="Phone Number"
                        android:fontFamily="@font/merriweather_italic"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="@+id/tv_phone"
                        app:layout_constraintStart_toStartOf="@+id/team_founded_date"/>

                    <TextView
                        android:id="@+id/website"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Website"
                        android:fontFamily="@font/merriweather_italic"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/tv_phone_number"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/tv_website"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="Website"
                        android:fontFamily="@font/merriweather_italic"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="@+id/website"
                        app:layout_constraintStart_toStartOf="@+id/team_founded_date"
                        />

                    <TextView
                        android:id="@+id/tv_email"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Email:"
                        android:fontFamily="@font/merriweather_italic"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@+id/tv_website"
                        app:layout_constraintStart_toStartOf="parent"/>

                    <TextView
                        android:id="@+id/tv_email_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        tools:text="Email"
                        android:fontFamily="@font/merriweather_italic"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="@+id/tv_email"
                        app:layout_constraintStart_toStartOf="@+id/team_founded_date"/>


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_team_players"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Team Players"
                android:layout_margin="10dp"
                android:textSize="15sp"
                android:textColor="@color/green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cv_club_detail"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/squad_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_team_players" />


            <ProgressBar
                android:id="@+id/team_detail_pgBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/team_detail_network_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/merriweather_bold"
                android:text="@string/please_wait"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/team_detail_pgBar" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>